sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:61: error: reassignment to val
  arrive = mod(arrive-1, nbBases);
         ^